...
              icon: Icons.drive_file_rename_outline_rounded,
              label: '重命名',
            ),
          const V3ActionSheetItem(
            value: V3KnowledgeNoteAction.move,
            icon: Icons.drive_file_move_outline,
            label: '移动到文件夹',
          ),
          const V3ActionSheetItem(
            value: V3KnowledgeNoteAction.duplicate,
            icon: Icons.copy_all_outlined,
            label: '创建副本',
          ),
...
